Release v0.6.0
